Fix alignment of Task table filters

--- a/client/src/components/Tasks/TaskTable.module.scss
+++ b/client/src/components/Tasks/TaskTable.module.scss
@@ -1,4 +1,9 @@
+
 .searchContainer {
   margin-bottom: 1em;
-  width: 358px;
+  width: 382px;
+}
+
+.filterForm {
+  padding-left: 0.75rem;
 }
